v0.0.2/_sources/examples/plot_040_boxplot.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/plot_040_boxplot.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_plot_040_boxplot.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_plot_040_boxplot.py:


boxplot
-------

Create publication-ready boxplots with statistical annotations.

This example demonstrates the full range of boxplot customization options
including statistical testing, outlier display, grouping, and styling.

.. GENERATED FROM PYTHON SOURCE LINES 12-15

Load data
~~~~~~~~~
We'll use classic datasets for demonstration.

.. GENERATED FROM PYTHON SOURCE LINES 15-24

.. code-block:: Python

    import matplotlib.pyplot as plt
    import seaborn as sns

    import cnsplots as cns

    iris = sns.load_dataset("iris")
    tips = sns.load_dataset("tips")









.. GENERATED FROM PYTHON SOURCE LINES 25-28

Basic boxplot
~~~~~~~~~~~~~
Simple boxplot showing distribution of total bills across days.

.. GENERATED FROM PYTHON SOURCE LINES 28-36

.. code-block:: Python

    cns.figure(150, 100)
    ax = cns.boxplot(data=tips, x="day", y="total_bill")
    ax.set_xticklabels(
        ax.get_xticklabels(), rotation=45, ha="right", rotation_mode="anchor"
    )
    ax.set_title("Basic Boxplot")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_001.png
   :alt: Basic Boxplot
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.

    Text(0.5, 1.0, 'Basic Boxplot')



.. GENERATED FROM PYTHON SOURCE LINES 37-41

Boxplot with Stripplot Overlay
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Overlay a stripplot to show individual observations on top of the boxplot.
Use one palette so both boxes and points share the same group colors.

.. GENERATED FROM PYTHON SOURCE LINES 41-73

.. code-block:: Python

    day_order = ["Thur", "Fri", "Sat", "Sun"]
    overlay_palette = dict(zip(day_order, sns.color_palette("NEJM", len(day_order))))
    cns.figure(150, 100)
    ax = cns.boxplot(
        data=tips,
        x="day",
        y="total_bill",
        order=day_order,
        palette=overlay_palette,
    )
    cns.stripplot(
        data=tips,
        x="day",
        y="total_bill",
        hue="day",
        order=day_order,
        hue_order=day_order,
        palette=overlay_palette,
        legend=False,
        ax=ax,
        size=2,
        alpha=0.5,
        showmedian=False,
    )
    if ax.get_legend() is not None:
        ax.get_legend().remove()
    ax.set_xticklabels(
        ax.get_xticklabels(), rotation=45, ha="right", rotation_mode="anchor"
    )
    ax.set_title("Boxplot with Stripplot Overlay")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_002.png
   :alt: Boxplot with Stripplot Overlay
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.

    Text(0.5, 1.0, 'Boxplot with Stripplot Overlay')



.. GENERATED FROM PYTHON SOURCE LINES 74-77

Boxplot with rotated and colored labels
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Customize x-axis tick labels with rotation and conditional coloring.

.. GENERATED FROM PYTHON SOURCE LINES 77-91

.. code-block:: Python

    cns.figure(150, 100)
    ax = cns.boxplot(data=tips, x="day", y="total_bill")
    ax.set_xticklabels(
        ax.get_xticklabels(), rotation=45, ha="right", rotation_mode="anchor"
    )

    xtick_labels = ax.get_xticklabels()
    for index in range(tips["day"].nunique()):
        if xtick_labels[index].get_text() in ["Thur", "Fri"]:
            xtick_labels[index].set_color("red")
        else:
            xtick_labels[index].set_color("blue")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_003.png
   :alt: plot 040 boxplot
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.




.. GENERATED FROM PYTHON SOURCE LINES 92-96

Boxplot with statistical comparisons (all pairs)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Use ``pairs="all"`` to perform Mann-Whitney U tests between all groups.
The ``addcount=True`` parameter adds sample sizes below each box.

.. GENERATED FROM PYTHON SOURCE LINES 96-107

.. code-block:: Python

    cns.figure(150, 100)
    ax = cns.boxplot(
        data=iris,
        x="species",
        y="sepal_width",
        pairs="all",
        addcount=True,
    )
    ax.set_title("All Pairwise Comparisons with Sample Counts")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_004.png
   :alt: All Pairwise Comparisons with Sample Counts
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_004.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.
       ---> P-values were determined by two-sided Mann-Whitney U test.

    Text(0.5, 1.0, 'All Pairwise Comparisons with Sample Counts')



.. GENERATED FROM PYTHON SOURCE LINES 108-111

Boxplot with specific pair comparisons
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Test only specific pairs by providing a list of tuples.

.. GENERATED FROM PYTHON SOURCE LINES 111-121

.. code-block:: Python

    cns.figure(150, 100)
    ax = cns.boxplot(
        data=iris,
        x="species",
        y="sepal_width",
        pairs=[("setosa", "virginica"), ("versicolor", "virginica")],
    )
    ax.set_title("Selected Pair Comparisons")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_005.png
   :alt: Selected Pair Comparisons
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_005.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.
       ---> P-values were determined by two-sided Mann-Whitney U test.

    Text(0.5, 1.0, 'Selected Pair Comparisons')



.. GENERATED FROM PYTHON SOURCE LINES 122-126

Grouped boxplot with hue
~~~~~~~~~~~~~~~~~~~~~~~~
Use ``hue`` parameter to create side-by-side boxes for subgroups.
Statistical testing works across hue groups as well.

.. GENERATED FROM PYTHON SOURCE LINES 126-138

.. code-block:: Python

    cns.figure(180, 100)
    ax = cns.boxplot(
        data=tips,
        x="day",
        y="total_bill",
        hue="sex",
        pairs=[(("Thur", "Male"), ("Fri", "Male"))],
    )
    cns.take_legend_out()
    ax.set_title("Grouped Boxplot with Cross-Group Comparison")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_006.png
   :alt: Grouped Boxplot with Cross-Group Comparison
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_006.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.
       ---> P-values were determined by two-sided Mann-Whitney U test.

    Text(0.5, 1.0, 'Grouped Boxplot with Cross-Group Comparison')



.. GENERATED FROM PYTHON SOURCE LINES 139-143

Horizontal boxplot with custom order
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Create horizontal boxplots by swapping x and y.
Use ``order`` to specify the display order of categories.

.. GENERATED FROM PYTHON SOURCE LINES 143-154

.. code-block:: Python

    cns.figure(100, 150)
    ax = cns.boxplot(
        data=iris,
        x="sepal_width",
        y="species",
        pairs="all",
        order=["versicolor", "setosa", "virginica"],
    )
    ax.set_title("Horizontal Boxplot")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_007.png
   :alt: Horizontal Boxplot
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_007.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.
       ---> P-values were determined by two-sided Mann-Whitney U test.

    Text(0.5, 1.0, 'Horizontal Boxplot')



.. GENERATED FROM PYTHON SOURCE LINES 155-158

Boxplot with outliers displayed
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Use ``showoutliers=True`` to display outlier points.

.. GENERATED FROM PYTHON SOURCE LINES 158-168

.. code-block:: Python

    cns.figure(150, 100)
    ax = cns.boxplot(
        data=tips,
        x="day",
        y="total_bill",
        showoutliers=True,
    )
    ax.set_title("Boxplot with Outliers")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_008.png
   :alt: Boxplot with Outliers
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_008.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.

    Text(0.5, 1.0, 'Boxplot with Outliers')



.. GENERATED FROM PYTHON SOURCE LINES 169-173

Boxplot with custom whisker range
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
The ``whis`` parameter controls whisker extent.
Default is 1.5 (1.5×IQR). Use larger values for fewer outliers.

.. GENERATED FROM PYTHON SOURCE LINES 173-184

.. code-block:: Python

    mp = cns.multipanel(max_width=350)

    mp.panel("A", 80, 120)
    cns.boxplot(data=tips, x="day", y="total_bill", whis=1.0, showoutliers=True)
    mp.get_axes("A").set_title("whis=1.0 (more outliers)")

    mp.panel("B", 80, 120)
    cns.boxplot(data=tips, x="day", y="total_bill", whis=3.0, showoutliers=True)
    mp.get_axes("B").set_title("whis=3.0 (fewer outliers)")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_009.png
   :alt: whis=1.0 (more outliers), whis=3.0 (fewer outliers)
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_009.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.0 times the interquartile range.
    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 3.0 times the interquartile range.

    Text(0.5, 1.0, 'whis=3.0 (fewer outliers)')



.. GENERATED FROM PYTHON SOURCE LINES 185-188

Boxplot with custom palette
~~~~~~~~~~~~~~~~~~~~~~~~~~~
Use ``palette`` parameter for custom colors.

.. GENERATED FROM PYTHON SOURCE LINES 188-193

.. code-block:: Python

    cns.figure(150, 100, "Tableau")
    ax = cns.boxplot(data=tips, x="day", y="total_bill")
    ax.set_title("Tableau Palette")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_010.png
   :alt: Tableau Palette
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_010.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.

    Text(0.5, 1.0, 'Tableau Palette')



.. GENERATED FROM PYTHON SOURCE LINES 194-197

Boxplot with custom list of colors
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Pass a list of colors to ``palette``.

.. GENERATED FROM PYTHON SOURCE LINES 197-203

.. code-block:: Python

    custom_colors = [cns.RED, cns.BLUE, cns.GREEN, cns.ORANGE]
    cns.figure(150, 100)
    ax = cns.boxplot(data=tips, x="day", y="total_bill", palette=custom_colors)
    ax.set_title("Custom Color List")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_011.png
   :alt: Custom Color List
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_011.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.

    Text(0.5, 1.0, 'Custom Color List')



.. GENERATED FROM PYTHON SOURCE LINES 204-207

Boxplot comparing multiple variables
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Melt the data to compare distributions across variables.

.. GENERATED FROM PYTHON SOURCE LINES 207-229

.. code-block:: Python

    iris_melted = iris.melt(
        id_vars=["species"],
        value_vars=["sepal_length", "sepal_width", "petal_length", "petal_width"],
        var_name="measurement",
        value_name="value",
    )

    cns.figure(200, 120)
    ax = cns.boxplot(
        data=iris_melted,
        x="measurement",
        y="value",
        hue="species",
    )
    cns.take_legend_out()
    ax.set_title("Multi-Variable Comparison")
    ax.set_xticklabels(
        ax.get_xticklabels(), rotation=45, ha="right", rotation_mode="anchor"
    )
    plt.setp(ax.get_xticklabels(), ha="right", rotation_mode="anchor")





.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_012.png
   :alt: Multi-Variable Comparison
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_012.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.

    [None, None, None, None, None, None, None, None]



.. GENERATED FROM PYTHON SOURCE LINES 230-233

Boxplot with grouped hue and all comparisons within groups
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
When using hue, you can compare all subgroups within a category.

.. GENERATED FROM PYTHON SOURCE LINES 233-246

.. code-block:: Python

    cns.figure(180, 120)
    ax = cns.boxplot(
        data=tips,
        x="day",
        y="total_bill",
        hue="smoker",
        pairs=[
            (("Sat", "Yes"), ("Sat", "No")),
            (("Sun", "Yes"), ("Sun", "No")),
        ],
    )
    cns.take_legend_out()
    ax.set_title("Within-Group Comparisons")



.. image-sg:: /examples/images/sphx_glr_plot_040_boxplot_013.png
   :alt: Within-Group Comparisons
   :srcset: /examples/images/sphx_glr_plot_040_boxplot_013.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Boxplots represent the median and bottom and upper quartiles; whiskers correspond to the 1.5 times the interquartile range.
       ---> P-values were determined by two-sided Mann-Whitney U test.

    Text(0.5, 1.0, 'Within-Group Comparisons')




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.691 seconds)


.. _sphx_glr_download_examples_plot_040_boxplot.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_040_boxplot.ipynb <plot_040_boxplot.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_040_boxplot.py <plot_040_boxplot.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_040_boxplot.zip <plot_040_boxplot.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
